# langstar

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXPERIMENT_FINDINGS.md  PHASE2_RECOMMENDATION.md  README.md  cliff.toml  hello.txt  mise.toml  progress.md  release.toml
.claude/: README.md  settings.ci.json  settings.json
.cursor/rules/: specify-rules.mdc
.devcontainer/: .env.default  Dockerfile  README.md  devcontainer.json  devcontainer.local.json.template  docker-compose.override.yml.template  docker-compose.yml  post-create.sh  setup-github-auth.sh
.github/: CLAUDE_ACTIONS_SETUP.md
.github/scripts/: update-issue-status.sh
.github/workflows/: README.md  auto-tag-release.yml  build-test-image.yml  ci.yml  claude.yml  issue-status-automation.yml  prepare-release.yml  release-features.yaml  release.yml
.specify/memory/: constitution.md
.specify/specs/: README.md
cli/: Cargo.toml
cli/src/: config.rs  error.rs  main.rs  output.rs
cli/src/commands/: assistant.rs  graph.rs  mod.rs  prompt.rs
cli/tests/: README.md  assistant_command_test.rs  graph_command_test.rs  prompt_scoping_test.rs
cli/tests/common/: fixtures.rs  mod.rs
docs/: architecture.md  configuration.md  installation.md  langchain-apis.md  troubleshooting.md
docs/dev/: README.md  ci-cd.md  claude-code-branch-naming.md  code-style-principles.md  git-scm-conventions.md  github-projects.md  github-workflow.md  issue-automation.md  procedures.md  spec-kit.md
docs/examples/: assistant-workflows.md  (+2 more)
scripts/: install.sh  test-installer.md
sdk/: Cargo.toml
sdk/src/: assistants.rs  auth.rs  client.rs  deployments.rs  error.rs  integrations.rs  lib.rs  organization.rs  prompts.rs
sdk/tests/: README.md  assistant_integration_test.rs  cli_testing_workspace.rs  graph_integration_test.rs  integration_deployment_workflow.rs  integration_test.rs  org_workspace_experiments.rs  org_workspace_scoping_test.rs
test-feature/: README.md
tools/: README.md  generate_sdk.sh
(+62 files in other folders)
