[workspace]
members = ["sdk", "cli"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2024"
authors = ["langstar contributors"]
license = "Apache-2.0"
repository = "https://github.com/codekiln/langstar"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
tabled = "0.16"
