[package]
name = "langstar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for unified access to LangChain ecosystem"

[[bin]]
name = "langstar"
path = "src/main.rs"

[dependencies]
langstar-sdk = { path = "../sdk" }

# CLI framework
clap.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Output formatting
tabled.workspace = true
colored = "2.1"

# Error handling
anyhow.workspace = true

# Config file handling
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
